# passmyfile

./: PLAN.md  README.md  index.html  package-lock.json  package.json  udp_test.txt  vite.config.ts
docs/: CHANGELOG.md  DEVELOPMENT.md  WECHAT-ARTICLE.md  手机端扩展方案.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: discovery.rs  http_server.rs  lib.rs  main.rs  transfer.rs  types.rs  udp_discovery.rs
