[package]
name = "feige-transfer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "feige_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 网络编程
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

# 错误处理
anyhow = "1"
thiserror = "1"

# 时间
chrono = "0.4"

# 系统目录
dirs = "5"
whoami = "1"

# HTTP 服务器
http = "1"
mime = "0.3"
mime_guess = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "blocking"] }
urlencoding = "2"
futures-util = "0.3"

